[feat/#23] 최근 등록 상품 조회 기능 구현
- 활성화된 상품을 기준으로 최신순 정렬하여 페이지네이션 처리
- 상품 ID 목록을 기반으로 이미지 및 태그 일괄 조회
- ProductRecentResponse DTO로 변환하여 반환